Add an overengineered-ass modal dialog system lol

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,17 @@ const alertDialog = document.getElementById("alert-dialog")
 const alertDialogTextContainer = alertDialog.querySelector("p")
 
 function showAlertDialog(msg) {
-    alertDialogTextContainer.textContent = msg
-    alertDialog.showModal()
+    if (!alertDialog.open) {
+        alertDialogTextContainer.textContent = msg
+        alertDialog.showModal()
+    } else {
+        const alertOnClose = () => {
+            alertDialog.removeEventListener("close", alertOnClose)
+            showAlertDialog(msg)
+        }
+
+        alertDialog.addEventListener("close", alertOnClose)
+    }
 }
 
 const savedPlayersKey = "players"
